--- a/symfony6-hands-on/templates/micro_post/_form.html.twig
+++ b/symfony6-hands-on/templates/micro_post/_form.html.twig
@@ -39,7 +39,15 @@
             )
          }}
          {{ form_errors(form.text)}}
-     </div> 
+     </div>
+     
+     <div class="flex items-center mt-4 mb-4">
+      {{ form_widget(form.extraPrivacy, {'attr': {'class': 'h-4 w-4 rounded border-gray border text-indigo-300 mr-2'}}) }}
+      {{ form_label(form.extraPrivacy, 'I want extra privacy', {'label_attr': {'class': 'text-sm text-gray-700 dark:text-gray-300 font-medium'}})}}
+    </div>
+    <div class="tex-gray-400 dark:text-gray-500 mb-4 text-sm">
+      This post can only be seen by the people that you follow.
+   </div>
 
      <div>
         <button 
