--- a/symfony6-hands-on/templates/settings_profile/profile_image.html.twig
+++ b/symfony6-hands-on/templates/settings_profile/profile_image.html.twig
@@ -8,13 +8,20 @@
 
 {% block body %}
     {{ include('settings_profile/_settings_profile_tabs.html.twig') }}
-    
-    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+
+    <div class="flex">
+    {{ include('shared/_avatar.html.twig', {'size': 31, profile: app.user.userProfile })}}
+
+    <div class="ml-16 items-center">
+        {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
 
     {{ form_label(form.profileImage, 'Change', {'label_attr': {'class': 'shadow-sm border-transparent bg-gray-300 hover:bg-gray-400 dark:bg-gray-700 dark:hover:bg-gray-900 cursor-pointer rounded-md p-2'}}) }}
     {{ form_widget(form.profileImage, {'attr': {'class': 'hidden'}}) }}
     {{ form_errors(form.profileImage) }}
+    </div>
 
+    </div>
+    
     <div>
         <button 
             type="submit"
